[package]
name = "gtk01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#druid = "0.7.0"
#sciter-rs = "0.5.58"
gtk4 = "0.5.4"
reqwest = "0.11.13"
tokio = {version="1.23.0",features=["full"]}
futures = "0.3.25"
glib = "0.16.7"
#gtk = "0.16.2"